ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
27/04/08 Oleh_Derevenko

        * Fixed incorrect memory copying which could lead to memory corruption
          in GIMPACT (luckily, in unused code)
        * Fixed possible memory read beyond the end of allocated buffer along
          with unnecessary extra memory copying in GIMPACT.
        * Fixed buffer reserve being incorrectly reset to zero for bitsets 
          what resulted in unnecessary memory reallocations in GIMPACT.
           
14/04/08 Oleh_Derevenko

        * Fixed possible memory corruption in new trimesh-trimesh collider
          in case if two degenerated triangles are checked against each other.

12/04/08 Oleh_Derevenko

        * Fixed sporadic assertion failure on vector normalization caused
          by small triangles degenerating into segments during space 
          transformations.

03/28/08 Remi

        * Fix a bug in dJointXXXGetInfo. The value in limot.limit was not
          always updated. (Ex: If hi and lo limit were changed). 

03/27/08 Remi

        * Added a new Joint: Prismatic Universal (patch #1828454).

         Daniel K. O.

        * Fixed bug #1841309: collide2() method buggy.

03/18/08 Rodrigo

        * New function: dVector4Copy.

03/14/08 david

        * Added stub calls for trimesh functions.
        * Applied patch #1914232: dGetConfiguration.
        * Applied patch #1655333: Optimize the function dNormalize3.
        * New function: dSetColliderOverride.
        * New function: dCheckConfiguration.
        
         Daniel K. O.

        * Disabled building shared library by default with autotools.

03/13/08 david
